--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="/public/favicon.ico" />
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <title>sisterwives studio</title>
   </head>
