--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="/public/favicon.ico" />
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
-    <title>sisterwives studio</title>
+    <title>sisterwives studio - web design, web development, and more</title>
   </head>
   <body>
     <noscript>
